<resources>
    <string name="app_name">Server Lock</string>
    <string name="title_activity_create_account">Sign Up</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Add</string>
    <string name="refresh">Swipe down to see new lock</string>
    <string name="locks">Server Locks</string>
    <string name="user_settings">User Settings</string>
    <string name="user_logout">Logout</string>
    <string name="app_deatails">App Details</string>
    <string name="about">About Us</string>
    <string name="support">Support</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="app_version_1_0">App version 1.0</string>
    <string name="server_room_access_control_using_iot">Server Room Access Control Using IoT</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="enter_registered_email_id">Enter registered email id</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="i_accept">I accept</string>
    <string name="email">Email</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="name">Name:</string>
    <string name="login">Login</string>
</resources>
